# demo-exchangerate-api

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: api.py
app/models/: model_price.py
app/routers/: price.py
app/services/: service_price.py
